# better-emoji-picker

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.js  emoji-data.js  emoji-data.test.js  index.html  search.js  search.test.js  splash.css  splash.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: autotype.rs  clipboard.rs  focus.rs  hotkey.rs  lib.rs  main.rs
src/data/: emoji-compact.json
