[package]
name = "better-emoji-picker"
version = "0.1.0"
description = "A fast, cross-platform emoji picker"
authors = ["ecalzo"]
edition = "2021"

[lib]
name = "better_emoji_picker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
enigo = { version = "0.3", features = [] }
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSWorkspace"] }

[target.'cfg(target_os = "linux")'.dependencies]
# xdotool/wtype called via Command, no extra deps needed
